--- a/docs/TemplateData/style.css
+++ b/docs/TemplateData/style.css
@@ -1,4 +1,4 @@
-#unity-canvas { background: #231F20 }
+#unity-canvas { background: #231F20; transform:rotate(90deg);    /* 中心を基準点に反時計回りに回転する */ }
 .unity-mobile #unity-canvas { width: 100%; height: 100% }
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
