--- a/docs/TemplateData/style.css
+++ b/docs/TemplateData/style.css
@@ -1,9 +1,8 @@
 body { padding: 0; margin: 0 }
 #unity-container { position: absolute }
 /*#unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }*/
-/*#unity-container.unity-mobile { position: fixed; 100%; height: 100%}*/
 /*#unity-canvas { background: #231F20; transform:rotate(-90deg); transform-origin: 55% 95%; }*/
-#unity-canvas {background: #0000ff}
+#unity-canvas {background: #0000ff; width:480px; height: 270px;}
 /*.unity-mobile #unity-canvas { width: 480px; height: 270px }*/
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-{{{ SPLASH_SCREEN_STYLE.toLowerCase() }}}.png') no-repeat center }
