--- a/docs/TemplateData/style.css
+++ b/docs/TemplateData/style.css
@@ -1,7 +1,7 @@
 body { padding: 0; margin: 0 }
 #unity-container { position-top: 200px;}
 /*#unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }*/
-#unity-canvas { background: #0000ff; transform:rotate(-90deg); transform-origin: 70% 70%;}
+#unity-canvas { background: #0000ff;}
 /*#unity-canvas {background: #0000ff; width:480px; height: 270px;}*/
 /*.unity-mobile #unity-canvas { width: 480px; height: 270px }*/
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
